Revision history for Perl extension PPI

1.199_02 ****
	Summary:
	- Added parser timeout support
	- Fixing various regression cases

	Details:
	- Created PPI::Exception with an eye to moving towards
	  using exceptions more for error handling (for speed).
	  The goal is to get rid of the "or return undef"s.
	- Added the timeout param to the PPI::Document constructor
	  which uses alarm to implement basic timeout support.
          This should help when parsing a large corpus on Unix.
	  (Not available on Win32)
	- Fixed incorrect location() for PPI::Structure instances.
	- Adding better parsing of hash constructors.

1.199_01 Tue 31 Oct 2006
	Summary:
	- Improved lexing correctness
	- Partial implementation of literal
	- Initial implementation of Number classes (Chris Dolan)

	Details:
	- Split out PPI::Token::Number subclasses
	- Implement numbers with exponential notation
        - Implement literal() for ::Number classes (except ::Version)
	- Implement literal() for ::Token::Quote::Single
	- Added -T for inline tests
	- Add tests for nested statements and nested structures
	- Fixed some bugs as a result
	- Improved detection of the correct curly brace structure types

1.118   Fri 22 Sep 2006
	Summary:
	- Better 5.10 support
	- Fixing various (mostly parsing) bugs

	Details:
	- Upgraded to Module::Install 0.64
	- Improving support for dor and added //= operators
        - Fixed parsing of binary, octal and hex numbers
        - Fixed parsing of /= and *=
	- Fixed #21571 symbol() returns just sigil with adjacent braces
	- Fixed #21575 variables() chokes on list with whitespace
	- Fixed #20480 (Misparse of some floating-point numbers.)
	- Fixed #19999: Make test fails (undeclared global variable $document) under Perl 5.6.2
	  (or at least, I think I have. This needs double-checking on Perl 5.6.2)
	- Partially Fixed #16952: [PATCH] Speed up tokenizer char-by-char
	  (Did not apply the patch, but fixed a bug noted as an aside in the report)